# tds-client

./: .gitignore  CMakeLists.txt  README.md  build.sh
include/: tds-client.h  tds_sysdep_public_port.h
src/: tds-client.cpp
test/: CMakeLists.txt  index.cpp  script.sql
